# slideshow-stack

./: .gitignore  .gitmodules  LICENSE  README.md  flake.nix  git-commit-guide.md
apps/control-panel/: .gitignore  .prettierignore  .stylelintrc.json  knip.config.js  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/control-panel/src/: app.css  app.d.ts  app.html
apps/control-panel/src/lib/api/: config.ts  media.ts  playback.ts  slideshow.ts  types.ts
apps/control-panel/src/lib/components/: DeviceSelectionModal.svelte  Toast.svelte  (+1 more)
apps/control-panel/src/routes/: +layout.svelte  +page.svelte
apps/playback-client/: .env.dev  .env.prod  .gitignore  Cargo.toml  Containerfile.build  DEFAULT_CONFIG.json5  Makefile  Makefile.container  build.rs  install-arm.sh
apps/playback-client/.cargo/: config.toml
apps/playback-client/src/: autostart.rs  config.rs  main.rs  slideshow_executor.rs  video_player.rs
apps/playback-client/src/sync/: client.rs  download.rs  mod.rs  validation.rs
apps/playback-client/src/zenoh/: command_handler.rs  commands.rs  connection.rs  keyexpr.rs  mod.rs
apps/playback-server/: .env.dev  .env.prod  .gitignore  Cargo.toml
apps/playback-server/src/: api.rs  config.rs  dispatcher.rs  main.rs  state.rs  zenoh.rs
apps/store/: .env.dev  .env.prod  .gitignore  Cargo.toml
apps/store/migrations/: 20250101000000_initial_schema.sql  20250102000000_remove_autostart_from_slideshows.sql
apps/store/src/: lib.rs  main.rs
apps/store/src/api/: handlers.rs  middleware.rs  mod.rs  responses.rs
apps/store/src/config/: mod.rs
apps/store/src/db/: mod.rs  models.rs  queries.rs
apps/store/src/media/: mod.rs  service.rs  storage.rs  types.rs
apps/store/src/slideshow/: mod.rs  service.rs  types.rs
deploy/compose/: compose.yaml  dev-pod.yaml  pod.yaml
deploy/containers/: Caddyfile
deploy/containers/control-panel/: Containerfile.dev
deploy/containers/playback-server/: Containerfile  Containerfile.dev
deploy/containers/store/: Containerfile  Containerfile.dev
deploy/quadlets/containers/: slideshow-control-panel.container  slideshow-playback-server.container  slideshow-store.container  slideshow-zenoh.container
deploy/quadlets/docs/: DEPLOY-QUADLETS.md
deploy/quadlets/networks/: slideshow-network.network
deploy/quadlets/volumes/: store-db.volume  store-media.volume
deploy/scripts/: build-images.sh  build-server.sh
deploy/systemd/: Caddyfile
deploy/systemd/scripts/: deploy-client.sh  deploy-server.sh  setup-client.sh  setup-server.sh  slideshow-network.sh
deploy/systemd/services/: slideshow-control-panel.service  slideshow-network.service  slideshow-playback-client.service  slideshow-playback-server.service  slideshow-store.service  slideshow-zenoh.service
libs/arm-gnueabihf/: libc.so.6  libdrm.so.2.123.0  libgcc_s.so.1
libs/ffmpeg-rs/: Cargo.toml
libs/ffmpeg-rs/src/: lib.rs
libs/ffmpeg-sys/: .gitignore  Cargo.toml  build.rs
libs/ffmpeg-sys/src/: lib.rs
libs/sdl3-image-rs/: Cargo.toml
libs/sdl3-image-rs/src/: lib.rs
libs/sdl3-image-sys/: .gitignore  Cargo.toml  build.rs
libs/sdl3-rs/: .gitignore  Cargo.toml  build.rs
libs/sdl3-rs/src/: lib.rs
libs/sdl3-sys/: Cargo.toml  build.rs
libs/slideshow-rs/: .gitignore  Cargo.toml
libs/slideshow-rs/src/: command.rs  image_loader.rs  lib.rs  slideshow.rs  types.rs
libs/video-rs/: Cargo.toml
libs/video-rs/src/: lib.rs  path_utils.rs  player.rs
(+13 files in other folders)
