[package]
name = "slideshow-rs"
version = "0.1.0"
edition = "2024"

[features]
drm = ["sdl3-image-rs/drm"]
desktop = ["sdl3-image-rs/desktop"]

[dependencies]
sdl3-rs = { path = "../sdl3-rs" }
sdl3-image-rs = { path = "../sdl3-image-rs" }
libc = "0.2"
thiserror = "1"
parking_lot = "0.12"
rand = "0.8"
